<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="451dp"
        android:layout_height="808dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/third_background" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="190dp"
        android:layout_height="49dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/asymmetric_button"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/basa_don"
        android:textSize="18sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/n_m_zdeki_derste"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/life_cycle"
        android:textAlignment="textEnd"
        android:textSize="16sp"
        app:theme="@style/ColorSwitchStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/fragments"
        android:textAlignment="textEnd"
        android:textSize="16sp"
        app:theme="@style/ColorSwitchStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch2"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/navigation_component"
        android:textAlignment="textEnd"
        android:textSize="16sp"
        app:theme="@style/ColorSwitchStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>